Update production environment variables for Vercel deployment

--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,13 @@
 # Production Environment Variables
 NEXT_PUBLIC_APP_URL=https://sermon-system.vercel.app
+NEXT_PUBLIC_BASE_URL=https://sermon-system.vercel.app
 
 # This is a placeholder - you'll need to set the actual key in Vercel dashboard
 OPENAI_API_KEY=
 
 # Storage settings for Vercel
-USE_VERCEL_BLOB=true 
+USE_VERCEL_BLOB=true
+
+# Disable mock transcription in production
+ALLOW_MOCK_TRANSCRIPTION=false
+USE_MOCK_TRANSCRIPTION=false 
