--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@google-cloud/speech": "^6.7.1",
     "@google-cloud/storage": "^7.15.2",
     "@heroicons/react": "^2.2.0",
