Add support for direct bucket access using storage key

--- a/.env.production
+++ b/.env.production
@@ -13,4 +13,7 @@ USE_VERCEL_BLOB=true
 
 # Disable mock transcription in production
 ALLOW_MOCK_TRANSCRIPTION=false
-USE_MOCK_TRANSCRIPTION=false 
+USE_MOCK_TRANSCRIPTION=false
+
+# Add the storage key at the appropriate location
+SUPABASE_STORAGE_KEY=99142e36ec4019f09c2e3386288b1875 
