Add NEXT_PUBLIC_ prefixed AWS environment variables for client-side access

--- a/.env.production
+++ b/.env.production
@@ -16,4 +16,16 @@ ALLOW_MOCK_TRANSCRIPTION=false
 USE_MOCK_TRANSCRIPTION=false
 
 # Add the storage key at the appropriate location
-SUPABASE_STORAGE_KEY=99142e36ec4019f09c2e3386288b1875 
+SUPABASE_STORAGE_KEY=99142e36ec4019f09c2e3386288b1875
+
+# AWS Configuration with NEXT_PUBLIC_ prefix for client-side access
+NEXT_PUBLIC_AWS_REGION=eu-north-1
+NEXT_PUBLIC_AWS_ACCESS_KEY_ID=AKIA5NIQA6MWNCKINBVY
+NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=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
+NEXT_PUBLIC_AWS_S3_BUCKET_NAME=emmanuel-church-sermons
+
+# Keep original ones for server-side access
+AWS_REGION=eu-north-1
+AWS_ACCESS_KEY_ID=AKIA5NIQA6MWNCKINBVY
+AWS_SECRET_ACCESS_KEY=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
+AWS_S3_BUCKET_NAME=emmanuel-church-sermons 
